--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes">
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <!-- <title>js</title> -->
-    <title>上海耐喜软件</title>
+    <title></title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
